--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
             </p>
         </div>
         <div>
-            <input class="input-text" type="text" name="ListItem" id="ListItem" data-com.agilebits.onepassword.user-edited="yes">
+            <input class="input-text" type="text" name="ListItem" data-com.agilebits.onepassword.user-edited="yes">
             <div id="button">Add</div>
         </div>
         <br>
         <ol>
-            <li id="c57aab79-7dfa-4d85-8ede-aa653a8b5d93" class="">
+            <!-- <li id="c57aab79-7dfa-4d85-8ede-aa653a8b5d93" class="">
                 <input name="done-todo" type="checkbox" class="done-todo"> Parking Lot APP Refactor </li>
             <li id="00bd6227-e881-4024-ad7a-4212d930c947" class="checked">
                 <input name="done-todo" type="checkbox" class="done-todo" checked> Parking Lot APP 时序图 </li>
@@ -33,12 +33,12 @@
             <li id="cda424c4-7f16-4841-886a-0de60a395d34" class="">
                 <input name="done-todo" type="checkbox" class="done-todo"> 总结Parking Lot APP开发过程中的问题和经验 </li>
             <li id="4a44c65d-a933-402f-b2ee-f8c2dcafee79" class="">
-                <input name="done-todo" type="checkbox" class="done-todo"> 总结TDD和Mock的应用经验 </li>
+                <input name="done-todo" type="checkbox" class="done-todo"> 总结TDD和Mock的应用经验 </li> -->
         </ol>
         <div>
             <ul id="filters">
                 <li>
-                    <a href="#" data-filter="all" class="selected">ALL</a>
+                    <a href="#" data-filter="all" class="checked">ALL</a>
                 </li>
                 <li>
                     <a href="#" data-filter="active" class="">Active</a>
